compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> var_init
Rule 6     declaration -> func_declaration
Rule 7     var_declaration -> type COLON var_list
Rule 8     var_init -> assignment
Rule 9     index -> index OPEN_BRACKET expression CLOSE_BRACKET
Rule 10    index -> OPEN_BRACKET expression CLOSE_BRACKET
Rule 11    type -> INTEIRO
Rule 12    type -> FLUTUANTE
Rule 13    func_declaration -> type header
Rule 14    func_declaration -> header
Rule 15    header -> ID OPEN_PARENTHESIS params_list CLOSE_PARENTHESIS body FIM
Rule 16    var_list -> var_list COMMA var
Rule 17    var_list -> var
Rule 18    var -> ID
Rule 19    var -> ID index
Rule 20    params_list -> params_list COMMA param
Rule 21    params_list -> param
Rule 22    params_list -> empty
Rule 23    param -> type COLON ID
Rule 24    param -> param OPEN_BRACKET CLOSE_BRACKET
Rule 25    body -> body action
Rule 26    body -> empty
Rule 27    action -> expression
Rule 28    action -> var_declaration
Rule 29    action -> se
Rule 30    action -> repita
Rule 31    action -> leia
Rule 32    action -> escreva
Rule 33    action -> retorna
Rule 34    se -> SE expression ENTAO body FIM
Rule 35    se -> SE expression ENTAO body SENAO body FIM
Rule 36    repita -> REPITA body ATE expression
Rule 37    assignment -> var ASSIGNMENT expression
Rule 38    leia -> LEIA OPEN_PARENTHESIS var CLOSE_PARENTHESIS
Rule 39    escreva -> ESCREVA OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
Rule 40    retorna -> RETORNA OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
Rule 41    expression -> logic_expression
Rule 42    expression -> assignment
Rule 43    logic_expression -> simple_expression
Rule 44    logic_expression -> logic_expression logic_operator simple_expression
Rule 45    simple_expression -> additive_expression
Rule 46    simple_expression -> simple_expression operator_relational additive_expression
Rule 47    additive_expression -> multiply_expression
Rule 48    additive_expression -> additive_expression sum_operator multiply_expression
Rule 49    multiply_expression -> single_expression
Rule 50    multiply_expression -> multiply_expression multiply_operator single_expression
Rule 51    single_expression -> factor
Rule 52    single_expression -> sum_operator factor
Rule 53    single_expression -> NOT factor
Rule 54    operator_relational -> EQUAL
Rule 55    operator_relational -> NOT_EQUAL
Rule 56    operator_relational -> GREATER_THAN
Rule 57    operator_relational -> GREATER_EQUAL
Rule 58    operator_relational -> LESS_THAN
Rule 59    operator_relational -> LESS_EQUAL
Rule 60    sum_operator -> PLUS
Rule 61    sum_operator -> MINUS
Rule 62    logic_operator -> AND
Rule 63    logic_operator -> OR
Rule 64    multiply_operator -> MULTIPLY
Rule 65    multiply_operator -> DIVIDE
Rule 66    factor -> OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
Rule 67    factor -> function_call
Rule 68    factor -> var
Rule 69    factor -> num
Rule 70    num -> N_INT
Rule 71    num -> N_FLOAT
Rule 72    function_call -> ID OPEN_PARENTHESIS arguments_list CLOSE_PARENTHESIS
Rule 73    arguments_list -> arguments_list COMMA expression
Rule 74    arguments_list -> expression
Rule 75    arguments_list -> empty
Rule 76    empty -> <empty>

Terminals, with rules where they appear

AND                  : 62
ASSIGNMENT           : 37
ATE                  : 36
CLOSE_BRACKET        : 9 10 24
CLOSE_PARENTHESIS    : 15 38 39 40 66 72
COLON                : 7 23
COMMA                : 16 20 73
DIVIDE               : 65
ENTAO                : 34 35
EQUAL                : 54
ESCREVA              : 39
FIM                  : 15 34 35
FLUTUANTE            : 12
GREATER_EQUAL        : 57
GREATER_THAN         : 56
ID                   : 15 18 19 23 72
INTEIRO              : 11
LEIA                 : 38
LESS_EQUAL           : 59
LESS_THAN            : 58
MINUS                : 61
MULTIPLY             : 64
NOT                  : 53
NOT_EQUAL            : 55
N_FLOAT              : 71
N_INT                : 70
OPEN_BRACKET         : 9 10 24
OPEN_PARENTHESIS     : 15 38 39 40 66 72
OR                   : 63
PLUS                 : 60
REPITA               : 36
RETORNA              : 40
SE                   : 34 35
SENAO                : 35
error                : 

Nonterminals, with rules where they appear

action               : 25
additive_expression  : 45 46 48
arguments_list       : 72 73
assignment           : 8 42
body                 : 15 25 34 35 35 36
declaration          : 2 3
declaration_list     : 1 2
empty                : 22 26 75
escreva              : 32
expression           : 9 10 27 34 35 36 37 39 40 66 73 74
factor               : 51 52 53
func_declaration     : 6
function_call        : 67
header               : 13 14
index                : 9 19
leia                 : 31
logic_expression     : 41 44
logic_operator       : 44
multiply_expression  : 47 48 50
multiply_operator    : 50
num                  : 69
operator_relational  : 46
param                : 20 21 24
params_list          : 15 20
program              : 0
repita               : 30
retorna              : 33
se                   : 29
simple_expression    : 43 44 46
single_expression    : 49 50
sum_operator         : 48 52
type                 : 7 13 23
var                  : 16 17 37 38 68
var_declaration      : 4 28
var_init             : 5
var_list             : 7 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . var_init
    (6) declaration -> . func_declaration
    (7) var_declaration -> . type COLON var_list
    (8) var_init -> . assignment
    (13) func_declaration -> . type header
    (14) func_declaration -> . header
    (11) type -> . INTEIRO
    (12) type -> . FLUTUANTE
    (37) assignment -> . var ASSIGNMENT expression
    (15) header -> . ID OPEN_PARENTHESIS params_list CLOSE_PARENTHESIS body FIM
    (18) var -> . ID
    (19) var -> . ID index

    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    ID              shift and go to state 13

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    var_init                       shift and go to state 5
    func_declaration               shift and go to state 6
    type                           shift and go to state 7
    assignment                     shift and go to state 8
    header                         shift and go to state 9
    var                            shift and go to state 12

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . var_init
    (6) declaration -> . func_declaration
    (7) var_declaration -> . type COLON var_list
    (8) var_init -> . assignment
    (13) func_declaration -> . type header
    (14) func_declaration -> . header
    (11) type -> . INTEIRO
    (12) type -> . FLUTUANTE
    (37) assignment -> . var ASSIGNMENT expression
    (15) header -> . ID OPEN_PARENTHESIS params_list CLOSE_PARENTHESIS body FIM
    (18) var -> . ID
    (19) var -> . ID index

    $end            reduce using rule 1 (program -> declaration_list .)
    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    ID              shift and go to state 13

    declaration                    shift and go to state 14
    var_declaration                shift and go to state 4
    var_init                       shift and go to state 5
    func_declaration               shift and go to state 6
    type                           shift and go to state 7
    assignment                     shift and go to state 8
    header                         shift and go to state 9
    var                            shift and go to state 12

state 3

    (3) declaration_list -> declaration .

    INTEIRO         reduce using rule 3 (declaration_list -> declaration .)
    FLUTUANTE       reduce using rule 3 (declaration_list -> declaration .)
    ID              reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .

    INTEIRO         reduce using rule 4 (declaration -> var_declaration .)
    FLUTUANTE       reduce using rule 4 (declaration -> var_declaration .)
    ID              reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> var_init .

    INTEIRO         reduce using rule 5 (declaration -> var_init .)
    FLUTUANTE       reduce using rule 5 (declaration -> var_init .)
    ID              reduce using rule 5 (declaration -> var_init .)
    $end            reduce using rule 5 (declaration -> var_init .)


state 6

    (6) declaration -> func_declaration .

    INTEIRO         reduce using rule 6 (declaration -> func_declaration .)
    FLUTUANTE       reduce using rule 6 (declaration -> func_declaration .)
    ID              reduce using rule 6 (declaration -> func_declaration .)
    $end            reduce using rule 6 (declaration -> func_declaration .)


state 7

    (7) var_declaration -> type . COLON var_list
    (13) func_declaration -> type . header
    (15) header -> . ID OPEN_PARENTHESIS params_list CLOSE_PARENTHESIS body FIM

    COLON           shift and go to state 15
    ID              shift and go to state 17

    header                         shift and go to state 16

state 8

    (8) var_init -> assignment .

    INTEIRO         reduce using rule 8 (var_init -> assignment .)
    FLUTUANTE       reduce using rule 8 (var_init -> assignment .)
    ID              reduce using rule 8 (var_init -> assignment .)
    $end            reduce using rule 8 (var_init -> assignment .)


state 9

    (14) func_declaration -> header .

    INTEIRO         reduce using rule 14 (func_declaration -> header .)
    FLUTUANTE       reduce using rule 14 (func_declaration -> header .)
    ID              reduce using rule 14 (func_declaration -> header .)
    $end            reduce using rule 14 (func_declaration -> header .)


state 10

    (11) type -> INTEIRO .

    COLON           reduce using rule 11 (type -> INTEIRO .)
    ID              reduce using rule 11 (type -> INTEIRO .)


state 11

    (12) type -> FLUTUANTE .

    COLON           reduce using rule 12 (type -> FLUTUANTE .)
    ID              reduce using rule 12 (type -> FLUTUANTE .)


state 12

    (37) assignment -> var . ASSIGNMENT expression

    ASSIGNMENT      shift and go to state 18


state 13

    (15) header -> ID . OPEN_PARENTHESIS params_list CLOSE_PARENTHESIS body FIM
    (18) var -> ID .
    (19) var -> ID . index
    (9) index -> . index OPEN_BRACKET expression CLOSE_BRACKET
    (10) index -> . OPEN_BRACKET expression CLOSE_BRACKET

    OPEN_PARENTHESIS shift and go to state 19
    ASSIGNMENT      reduce using rule 18 (var -> ID .)
    OPEN_BRACKET    shift and go to state 21

    index                          shift and go to state 20

state 14

    (2) declaration_list -> declaration_list declaration .

    INTEIRO         reduce using rule 2 (declaration_list -> declaration_list declaration .)
    FLUTUANTE       reduce using rule 2 (declaration_list -> declaration_list declaration .)
    ID              reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 15

    (7) var_declaration -> type COLON . var_list
    (16) var_list -> . var_list COMMA var
    (17) var_list -> . var
    (18) var -> . ID
    (19) var -> . ID index

    ID              shift and go to state 24

    var_list                       shift and go to state 22
    var                            shift and go to state 23

state 16

    (13) func_declaration -> type header .

    INTEIRO         reduce using rule 13 (func_declaration -> type header .)
    FLUTUANTE       reduce using rule 13 (func_declaration -> type header .)
    ID              reduce using rule 13 (func_declaration -> type header .)
    $end            reduce using rule 13 (func_declaration -> type header .)


state 17

    (15) header -> ID . OPEN_PARENTHESIS params_list CLOSE_PARENTHESIS body FIM

    OPEN_PARENTHESIS shift and go to state 19


state 18

    (37) assignment -> var ASSIGNMENT . expression
    (41) expression -> . logic_expression
    (42) expression -> . assignment
    (43) logic_expression -> . simple_expression
    (44) logic_expression -> . logic_expression logic_operator simple_expression
    (37) assignment -> . var ASSIGNMENT expression
    (45) simple_expression -> . additive_expression
    (46) simple_expression -> . simple_expression operator_relational additive_expression
    (18) var -> . ID
    (19) var -> . ID index
    (47) additive_expression -> . multiply_expression
    (48) additive_expression -> . additive_expression sum_operator multiply_expression
    (49) multiply_expression -> . single_expression
    (50) multiply_expression -> . multiply_expression multiply_operator single_expression
    (51) single_expression -> . factor
    (52) single_expression -> . sum_operator factor
    (53) single_expression -> . NOT factor
    (66) factor -> . OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
    (67) factor -> . function_call
    (68) factor -> . var
    (69) factor -> . num
    (60) sum_operator -> . PLUS
    (61) sum_operator -> . MINUS
    (72) function_call -> . ID OPEN_PARENTHESIS arguments_list CLOSE_PARENTHESIS
    (70) num -> . N_INT
    (71) num -> . N_FLOAT

    ID              shift and go to state 31
    NOT             shift and go to state 36
    OPEN_PARENTHESIS shift and go to state 37
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41
    N_INT           shift and go to state 42
    N_FLOAT         shift and go to state 43

    var                            shift and go to state 25
    expression                     shift and go to state 26
    logic_expression               shift and go to state 27
    assignment                     shift and go to state 28
    simple_expression              shift and go to state 29
    additive_expression            shift and go to state 30
    multiply_expression            shift and go to state 32
    sum_operator                   shift and go to state 33
    single_expression              shift and go to state 34
    factor                         shift and go to state 35
    function_call                  shift and go to state 38
    num                            shift and go to state 39

state 19

    (15) header -> ID OPEN_PARENTHESIS . params_list CLOSE_PARENTHESIS body FIM
    (20) params_list -> . params_list COMMA param
    (21) params_list -> . param
    (22) params_list -> . empty
    (23) param -> . type COLON ID
    (24) param -> . param OPEN_BRACKET CLOSE_BRACKET
    (76) empty -> .
    (11) type -> . INTEIRO
    (12) type -> . FLUTUANTE

    CLOSE_PARENTHESIS reduce using rule 76 (empty -> .)
    COMMA           reduce using rule 76 (empty -> .)
    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11

    params_list                    shift and go to state 44
    param                          shift and go to state 45
    empty                          shift and go to state 46
    type                           shift and go to state 47

state 20

    (19) var -> ID index .
    (9) index -> index . OPEN_BRACKET expression CLOSE_BRACKET

    ASSIGNMENT      reduce using rule 19 (var -> ID index .)
    COMMA           reduce using rule 19 (var -> ID index .)
    INTEIRO         reduce using rule 19 (var -> ID index .)
    FLUTUANTE       reduce using rule 19 (var -> ID index .)
    ID              reduce using rule 19 (var -> ID index .)
    $end            reduce using rule 19 (var -> ID index .)
    FIM             reduce using rule 19 (var -> ID index .)
    SE              reduce using rule 19 (var -> ID index .)
    REPITA          reduce using rule 19 (var -> ID index .)
    LEIA            reduce using rule 19 (var -> ID index .)
    ESCREVA         reduce using rule 19 (var -> ID index .)
    RETORNA         reduce using rule 19 (var -> ID index .)
    NOT             reduce using rule 19 (var -> ID index .)
    OPEN_PARENTHESIS reduce using rule 19 (var -> ID index .)
    PLUS            reduce using rule 19 (var -> ID index .)
    MINUS           reduce using rule 19 (var -> ID index .)
    N_INT           reduce using rule 19 (var -> ID index .)
    N_FLOAT         reduce using rule 19 (var -> ID index .)
    ATE             reduce using rule 19 (var -> ID index .)
    SENAO           reduce using rule 19 (var -> ID index .)
    MULTIPLY        reduce using rule 19 (var -> ID index .)
    DIVIDE          reduce using rule 19 (var -> ID index .)
    EQUAL           reduce using rule 19 (var -> ID index .)
    NOT_EQUAL       reduce using rule 19 (var -> ID index .)
    GREATER_THAN    reduce using rule 19 (var -> ID index .)
    GREATER_EQUAL   reduce using rule 19 (var -> ID index .)
    LESS_THAN       reduce using rule 19 (var -> ID index .)
    LESS_EQUAL      reduce using rule 19 (var -> ID index .)
    AND             reduce using rule 19 (var -> ID index .)
    OR              reduce using rule 19 (var -> ID index .)
    CLOSE_BRACKET   reduce using rule 19 (var -> ID index .)
    CLOSE_PARENTHESIS reduce using rule 19 (var -> ID index .)
    ENTAO           reduce using rule 19 (var -> ID index .)
    OPEN_BRACKET    shift and go to state 48


state 21

    (10) index -> OPEN_BRACKET . expression CLOSE_BRACKET
    (41) expression -> . logic_expression
    (42) expression -> . assignment
    (43) logic_expression -> . simple_expression
    (44) logic_expression -> . logic_expression logic_operator simple_expression
    (37) assignment -> . var ASSIGNMENT expression
    (45) simple_expression -> . additive_expression
    (46) simple_expression -> . simple_expression operator_relational additive_expression
    (18) var -> . ID
    (19) var -> . ID index
    (47) additive_expression -> . multiply_expression
    (48) additive_expression -> . additive_expression sum_operator multiply_expression
    (49) multiply_expression -> . single_expression
    (50) multiply_expression -> . multiply_expression multiply_operator single_expression
    (51) single_expression -> . factor
    (52) single_expression -> . sum_operator factor
    (53) single_expression -> . NOT factor
    (66) factor -> . OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
    (67) factor -> . function_call
    (68) factor -> . var
    (69) factor -> . num
    (60) sum_operator -> . PLUS
    (61) sum_operator -> . MINUS
    (72) function_call -> . ID OPEN_PARENTHESIS arguments_list CLOSE_PARENTHESIS
    (70) num -> . N_INT
    (71) num -> . N_FLOAT

    ID              shift and go to state 31
    NOT             shift and go to state 36
    OPEN_PARENTHESIS shift and go to state 37
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41
    N_INT           shift and go to state 42
    N_FLOAT         shift and go to state 43

    expression                     shift and go to state 49
    logic_expression               shift and go to state 27
    assignment                     shift and go to state 28
    simple_expression              shift and go to state 29
    var                            shift and go to state 25
    additive_expression            shift and go to state 30
    multiply_expression            shift and go to state 32
    sum_operator                   shift and go to state 33
    single_expression              shift and go to state 34
    factor                         shift and go to state 35
    function_call                  shift and go to state 38
    num                            shift and go to state 39

state 22

    (7) var_declaration -> type COLON var_list .
    (16) var_list -> var_list . COMMA var

    INTEIRO         reduce using rule 7 (var_declaration -> type COLON var_list .)
    FLUTUANTE       reduce using rule 7 (var_declaration -> type COLON var_list .)
    ID              reduce using rule 7 (var_declaration -> type COLON var_list .)
    $end            reduce using rule 7 (var_declaration -> type COLON var_list .)
    FIM             reduce using rule 7 (var_declaration -> type COLON var_list .)
    SE              reduce using rule 7 (var_declaration -> type COLON var_list .)
    REPITA          reduce using rule 7 (var_declaration -> type COLON var_list .)
    LEIA            reduce using rule 7 (var_declaration -> type COLON var_list .)
    ESCREVA         reduce using rule 7 (var_declaration -> type COLON var_list .)
    RETORNA         reduce using rule 7 (var_declaration -> type COLON var_list .)
    NOT             reduce using rule 7 (var_declaration -> type COLON var_list .)
    OPEN_PARENTHESIS reduce using rule 7 (var_declaration -> type COLON var_list .)
    PLUS            reduce using rule 7 (var_declaration -> type COLON var_list .)
    MINUS           reduce using rule 7 (var_declaration -> type COLON var_list .)
    N_INT           reduce using rule 7 (var_declaration -> type COLON var_list .)
    N_FLOAT         reduce using rule 7 (var_declaration -> type COLON var_list .)
    ATE             reduce using rule 7 (var_declaration -> type COLON var_list .)
    SENAO           reduce using rule 7 (var_declaration -> type COLON var_list .)
    COMMA           shift and go to state 50


state 23

    (17) var_list -> var .
